--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.14.1",
+    "nodemon": "^3.1.10",
     "react-icons": "^5.5.0"
-  }
+  },
+  "name": "realstate",
+  "version": "1.0.0",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon api/index.js",
+    "start": "nodemon api/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ali-Khan04/RealStateX.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ali-Khan04/RealStateX/issues"
+  },
+  "homepage": "https://github.com/Ali-Khan04/RealStateX#readme",
+  "description": ""
 }
